--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <main class="hero">
     <div class="overlay"></div>
     <header class="social-header">
-      <a href="https://github.com/Zim-Arafat" target="_blank" aria-label="Portfolio"><i class="fa-solid fa-briefcase"></i></a>
+      <a href="https://github.com/Zim-Arafat" target="_blank" aria-label="GitHub"><i
+          class="fa-brands fa-github"></i></a>
       <a href="#" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
       <a href="mailto:zimarafat.me@gmail.com" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
     </header>
@@ -21,7 +24,8 @@
       <div class="text-block">
         <h1>Welcome</h1>
         <h2>I'm Zim Arafat, a tech enthusiast</h2>
-        <p>I'm passionate about exploring new technologies and creating meaningful digital experiences that make a difference.</p>
+        <p>I'm passionate about exploring new technologies and creating meaningful digital experiences that make a
+          difference.</p>
       </div>
     </section>
     <footer class="copyright">
@@ -29,4 +33,5 @@
     </footer>
   </main>
 </body>
-</html> 
+
+</html>
